# cdk-organizer

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  workspace.json
docs/: contributing.md  gen_doc_stubs.py  index.md  summary.md
docs/css/: github-permalink-style.css
docs/diagrams/: cdk-organizer.drawio
examples/python/aws-cdk/: README.md  app.py  cdk.json  project.json  pyproject.toml
examples/python/aws-cdk/config/dev/eu-west-1/: config.yaml
examples/python/aws-cdk/config/dev/eu-west-1/iam/: config.yaml
examples/python/aws-cdk/config/dev/eu-west-1/storage/: config.yaml
examples/python/aws-cdk/stacks/iam/: stacks.py
examples/python/aws-cdk/stacks/storage/: stacks.py
examples/python/aws-cdk/templates/: iam_role_stack.py  s3_stack.py
examples/python/cdktf/: README.md  app.py  cdktf.json  project.json  pyproject.toml
examples/python/cdktf/config/dev/: config.yaml
examples/python/cdktf/config/dev/eu-west-1/storage/: config.yaml
examples/python/cdktf/config/dev/us-east-1/: config.yaml
examples/python/cdktf/stacks/: config.py
examples/python/cdktf/stacks/iam/: stacks.py
examples/python/cdktf/stacks/storage/: stacks.py
examples/python/cdktf/templates/: iam_role_stack.py  s3_stack.py
examples/typescript/aws-cdk/: README.md  cdk.json  package.json  project.json
examples/typescript/aws-cdk/config/dev/eu-west-1/storage/: config.yaml
examples/typescript/aws-cdk/stacks/iam/: stacks.ts
examples/typescript/aws-cdk/stacks/storage/: stacks.ts
examples/typescript/aws-cdk/templates/: role-stack.ts  s3-stack.ts
examples/typescript/cdktf/: README.md  cdktf.json  package.json  project.json
examples/typescript/cdktf/config/dev/: config.yaml
examples/typescript/cdktf/config/dev/eu-west-1/: config.yaml
examples/typescript/cdktf/config/dev/eu-west-1/storage/: config.yaml
examples/typescript/cdktf/stacks/iam/: stacks.ts
examples/typescript/cdktf/stacks/storage/: stacks.ts
examples/typescript/cdktf/templates/: role-stack.ts  s3-stack.ts
