[tool.poetry]
name = "aws-cdk-project-framework"
version = "1.0.0"
description = "AWS CDK Project Framework"
license = "Proprietary"
authors = [ ]
readme = "README.md"
repository = "https://github.com/lucasvieirasilva/cdk-organizer"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

    [tool.poetry.dependencies.cdk-organizer]
    path = "packages/python"
    develop = true
    extras = [ "aws", "terraform" ]

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
flake8-isort = "4.1.1"
flake8-print = "5.0.0"
flake8-pytest-style = "1.6.0"
flake8-docstrings = "1.6.0"
flake8-type-checking = "2.0.6"
autopep8 = "1.5.7"
pytest = "7.1.2"
pytest-env = "0.6.2"
pytest-cov = "3.0.0"
pytest-html = "3.1.1"
pytest-sugar = "0.9.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.3.1"
mkdocs-material = "8.3.9"
mkdocs-material-extensions = "1.0.3"
mkdocs-autorefs = "0.4.1"
mkdocs_gen_files = "0.3.5"
mkdocs-literate-nav = "0.4.1"
mkdocs-include-markdown-plugin = "3.5.2"
mkdocs-swagger-ui-tag = "0.3.2"

  [tool.poetry.group.docs.dependencies.mkdocstrings]
  version = "0.19.0"
  extras = [ "python" ]

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
